--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,16 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "@station/buttons": [
+        "dist/station/buttons/station-buttons",
+        "dist/station/buttons"
+      ],
+      "@station/cards": [
+        "dist/station/cards/station-cards",
+        "dist/station/cards"
+      ]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
