--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,171 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-  }
+    "@station/buttons": {
+      "projectType": "library",
+      "root": "projects/station/buttons",
+      "sourceRoot": "projects/station/buttons/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/station/buttons/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/station/buttons/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/station/buttons/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/station/buttons/src/test.ts",
+            "tsConfig": "projects/station/buttons/tsconfig.spec.json",
+            "karmaConfig": "projects/station/buttons/karma.conf.js"
+          }
+        }
+      }
+    },
+    "@station/cards": {
+      "projectType": "library",
+      "root": "projects/station/cards",
+      "sourceRoot": "projects/station/cards/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/station/cards/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/station/cards/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/station/cards/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/station/cards/src/test.ts",
+            "tsConfig": "projects/station/cards/tsconfig.spec.json",
+            "karmaConfig": "projects/station/cards/karma.conf.js"
+          }
+        }
+      }
+    },
+    "@station/test": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        },
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      "root": "projects/@station/test",
+      "sourceRoot": "projects/@station/test/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/@station/test",
+            "index": "projects/@station/test/src/index.html",
+            "main": "projects/@station/test/src/main.ts",
+            "polyfills": "projects/@station/test/src/polyfills.ts",
+            "tsConfig": "projects/@station/test/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/@station/test/src/favicon.ico",
+              "projects/@station/test/src/assets"
+            ],
+            "styles": [
+              "projects/@station/test/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/@station/test/src/environments/environment.ts",
+                  "with": "projects/@station/test/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "@station/test:build:production"
+            },
+            "development": {
+              "browserTarget": "@station/test:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "@station/test:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/@station/test/src/test.ts",
+            "polyfills": "projects/@station/test/src/polyfills.ts",
+            "tsConfig": "projects/@station/test/tsconfig.spec.json",
+            "karmaConfig": "projects/@station/test/karma.conf.js",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/@station/test/src/favicon.ico",
+              "projects/@station/test/src/assets"
+            ],
+            "styles": [
+              "projects/@station/test/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "@station/buttons"
 }
